Return type profiling is not performed from aarch64 interpreter

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b36
    • aarch64

      jtreg test fail: compiler/arraycopy/TestArrayCopyNoInitDeopt.java

      fail is aarch64 specific, reproduced on Scaleway cloud ARM64 Cavium
      machine
        javaoptions: "-XX:-TieredCompilation"

      Reason:
        return type profiling is not performed from aarch64 interpreter
      Fix:
        adding missing profiling for aarch64, similar to correspondent x86/sparc/s390/ppc implementations

      Part of JTreg log:
      ----------System.err:(13/838)----------
      java.lang.RuntimeException: m2 not deoptimized
      at compiler.arraycopy.TestArrayCopyNoInitDeopt.main(TestArrayCopyNoInitDeopt.java:154)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:115)
      at java.base/java.lang.Thread.run(Thread.java:844)

            Assignee:
            Dmitry Chuyko
            Reporter:
            Michail Chernov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: