8188221: Return type profiling is not performed from aarch64 interpreter

Reviewed-by: drwhite